@@ -434,27 +434,57 @@ operator|.
 name|getPositionIncrement
 argument_list|()
 decl_stmt|;
+name|int
+name|position
+init|=
 name|fieldState
 operator|.
 name|position
-operator|+=
+operator|+
 name|posIncr
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
-name|fieldState
-operator|.
 name|position
 operator|>
 literal|0
 condition|)
 block|{
-name|fieldState
-operator|.
 name|position
 operator|--
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+name|position
+operator|<
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"position overflow for field '"
+operator|+
+name|field
+operator|.
+name|name
+argument_list|()
+operator|+
+literal|"'"
+argument_list|)
+throw|;
+block|}
+comment|// position is legal, we can safely place it in fieldState now.
+comment|// not sure if anything will use fieldState after non-aborting exc...
+name|fieldState
+operator|.
+name|position
+operator|=
+name|position
+expr_stmt|;
 if|if
 condition|(
 name|posIncr
